--- a/Blog.Web/Views/AdminBlogPosts/Edit.cshtml
+++ b/Blog.Web/Views/AdminBlogPosts/Edit.cshtml
@@ -35,6 +35,20 @@
             </div>
 
             <div class="mb-3">
+                <label class="form-label">Featured Image Upload</label>
+                <input type="file" id="featuredImageUpload" class="form-control" />
+
+                @if(Model.FeaturedImageUrl != null)
+                {
+                    <img src="@Model.FeaturedImageUrl" id="featuredImageDisplay" style="display:block;width:300px;" class="mt-3" />
+                }
+                else
+                {
+                    <img src="" id="featuredImageDisplay" style="display:none;width:300px;" class="mt-3" />
+                }
+            </div>
+
+            <div class="mb-3">
                 <label class="form-label">Featured Image URL</label>
                 <input type="text" class="form-control" id="featuredImageUrl" asp-for="@Model.FeaturedImageUrl" />
             </div>
@@ -78,3 +92,37 @@
         <p>No blog post found!</p>
     }
 </div>
+
+@section Scripts {
+    <script>
+        var editor = new FroalaEditor('#content', {
+            imageUploadURL: '/api/images'
+        });
+
+        const featuredUploadElement = document.getElementById('featuredImageUpload');
+        const featuredImageUrlElement = document.getElementById('featuredImageUrl');
+        const featuredImageDisplayElement = document.getElementById('featuredImageDisplay');
+
+        async function uploadFeaturedImage(e) {
+            console.log(e.target.files[0]);
+
+            let data = new FormData();
+            data.append('file', e.target.files[0]);
+
+            await fetch('/api/images', {
+                method: 'POST',
+                headers: {
+                    'Aceept': '*/*',
+                },
+                body: data
+            }).then(response => response.json())
+                .then(result => {
+                    featuredImageUrlElement.value = result.link;
+                    featuredImageDisplayElement.src = result.link;
+                    featuredImageDisplayElement.style.display = 'block';
+                });
+        }
+
+        featuredUploadElement.addEventListener('change', uploadFeaturedImage);
+    </script>
+}
