--- a/Blog.Web/Views/Blogs/Index.cshtml
+++ b/Blog.Web/Views/Blogs/Index.cshtml
@@ -1,4 +1,8 @@
-﻿@model Blog.Web.Models.Domain.BlogPost
+﻿@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> signInManager
+@inject UserManager<IdentityUser> userManager
+
+@model Blog.Web.Models.ViewModels.BlogDetailsViewModel
 
 @{
     ViewData["Title"] = Model.PageTitle;
@@ -7,7 +11,6 @@
 <div class="container my-5">
     <div class="row justify-content-center">
         <div class="col-12 col-lg-6">
-
             @if (Model != null)
             {
                 <h1 class="mb-3">@Model.Heading</h1>
@@ -15,6 +18,25 @@
                 <div class="d-flex justify-content-between mb-3">
                     <span class="text-secondary">@Model.Author</span>
                     <span class="text-secondary">@Model.PublishedDate.ToShortDateString()</span>
+                </div>
+
+                <div class="mb-3">
+                    @if(signInManager.IsSignedIn(User))
+                    {
+                        if(Model.Liked)
+                        {
+                            <a style="cursor:pointer;">
+                                <i class="bi bi-hand-thumbs-up-fill"></i>
+                            </a>
+                        }
+                        else
+                        {
+                            <a id="btnLike" style="cursor:pointer;">
+                                <i class="bi bi-hand-thumbs-up"></i>
+                            </a>
+                        }
+                    }
+                    <span id="totalLikes">@Model.TotalLikes</span> likes
                 </div>
 
                 <div class="mb-3 d-flex">
@@ -30,14 +52,91 @@
                     @Html.Raw(Model.Content)
                 </div>
 
+                <div class="card">
+                    <div class="card-header">
+                        <h5>Comments</h5>
+                    </div>
+
+                    @if (signInManager.IsSignedIn(User))
+                    {
+                        <form method="post">
+                            <div class="m-3">
+                                <label class="form-label">
+                                    Comment Description
+                                </label>
+                                <input type="text" class="form-control" asp-for="CommentDescription"/>
+                            </div>
+                            <div class="m-3">
+                                <button type="submit" class="btn btn-dark">Submit</button>
+                                <input type="hidden" asp-for="ID"/>
+                                <input type="hidden" asp-for="UrlHandle" />
+                            </div>
+                        </form>
+                    }
+                </div>
+                <div class="card-body">
+                    @if(Model.Comments != null && Model.Comments.Any())
+                    {
+                        @foreach(var comment in Model.Comments)
+                        {
+                            <div class="card mb-3">
+                                <div class="card-body">
+                                    <div>
+                                        @comment.Description
+                                    </div>
+                                    <div class="d-flex justify-content-between">
+                                        <span class="text-secondary">@comment.Username</span>
+                                        <span class="text-secondary">@comment.DateAdded.ToShortDateString()</span>
+                                    </div>
+                                </div>
+                            </div>
+                        }
+                    }
+                </div>
             }
             else
             {
                 <p>Blog Post not found!</p>
             }
-
         </div>
-
     </div>
-
 </div>
+
+@section Scripts{
+    <script>
+        const btnLikeElement = document.getElementById('btnLike');
+        const totalLikeElement = document.getElementById('totalLikes');
+
+        async function getTotalLikes() {
+            fetch('api/BlogPostLike/@Model.ID/totalLikes', {
+                method: 'GET',
+                headers: {
+                    'Content-Type': 'application/json',
+                    'Accept': '*/*'
+                }
+            }).then(data => data.json())
+            .then(result => totalLikeElement.innerHTML = result);
+        }
+
+        async function addLikeForBlog() { 
+            fetch('/api/BlogPostLike/Add', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                    'Accept': '*/*'
+                },
+                body: JSON.stringify({
+                    blogPostID: '@Model.ID', 
+                    userID: '@userManager.GetUserId(User)'
+                })
+            }).then(() => {
+                btnLikeElement.innerHTML = '<i class="bi bi-hand-thumbs-up-fill"></i>';
+                btnLikeElement.removeEventListener('click', addLikeForBlog);
+                getTotalLikes();
+            });
+        }
+
+        btnLikeElement.addEventListener('click', addLikeForBlog);
+
+    </script>
+}
