--- a/Blog.Web/Views/Home/Index.cshtml
+++ b/Blog.Web/Views/Home/Index.cshtml
@@ -49,7 +49,7 @@
                         <img src="@blogPost.FeaturedImageUrl" alt="@blogPost.Heading" class="mb-2 d-block img-fluid">
                         <h2 class="mb-4">@blogPost.Heading</h2>
                         <p class="mb-4">
-                            Author: @blogPost.BlogUser.UserName
+                            Author: 
                             <br />
                             Published Date: @blogPost.PublishedDate.ToShortDateString()
                         </p>
