--- a/Blog.Web/Views/Shared/_Layout.cshtml
+++ b/Blog.Web/Views/Shared/_Layout.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> signInManager
+@using Blog.Web.Models.Domain
+@inject SignInManager<BlogUser> signInManager
 
 <!DOCTYPE html>
 <html lang="en">
